--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -121,46 +121,37 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="85dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
-                android:layout_width="159dp"
-                android:layout_height="50dp"
+                android:id="@+id/editTextTextPersonName7"
+                android:layout_width="171dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:hint="@string/weight"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:padding="10dp" />
+
+            <EditText
+                android:id="@+id/Age"
+                android:layout_width="178dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_input"
                 android:ems="10"
-                android:hint="@string/head"
+                android:hint="Возраст"
                 android:inputType="textPersonName"
+                android:minHeight="48dp"
                 android:padding="10dp" />
 
-            <EditText
-                android:id="@+id/editTextTextPersonName"
-                android:layout_width="169dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_input"
-                android:ems="10"
-                android:hint="@string/height"
-                android:inputType="textPersonName"
-                android:padding="10dp" />
         </LinearLayout>
-
-        <EditText
-            android:id="@+id/editTextTextPersonName7"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_input"
-            android:ems="10"
-            android:hint="@string/weight"
-            android:inputType="textPersonName"
-            android:padding="10dp" />
 
         <Spinner
             android:id="@+id/spinner"
