--- a/app/src/main/res/layout/activity_info_read.xml
+++ b/app/src/main/res/layout/activity_info_read.xml
@@ -8,17 +8,18 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="419dp"
+        android:layout_height="167dp"
         android:layout_marginBottom="-20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/vector_bg" />
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="416dp"
+        android:layout_height="170dp"
         android:layout_marginTop="-20dp"
         android:rotation="180"
         app:layout_constraintEnd_toEndOf="parent"
