--- a/app/src/main/res/layout/activity_info_read.xml
+++ b/app/src/main/res/layout/activity_info_read.xml
@@ -7,6 +7,17 @@
     tools:context=".InfoReadActivity">
 
     <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="53dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="changeInfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        app:srcCompat="@drawable/ic_baseline_delete_24" />
+
+    <ImageView
         android:id="@+id/imageView11"
         android:layout_width="419dp"
         android:layout_height="167dp"
