--- a/app/src/main/res/layout/activity_add_child.xml
+++ b/app/src/main/res/layout/activity_add_child.xml
@@ -64,8 +64,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="344dp"
-        android:layout_height="330dp"
+        android:layout_width="355dp"
+        android:layout_height="413dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +106,17 @@
             android:inputType="textCapWords"
             android:minHeight="48dp"
             android:padding="10dp" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="12dp"
+
+            android:background="@drawable/custom_input"
+
+            android:entries="@array/SmesiNames" />
+
 
         <EditText
             android:id="@+id/RegActivityBirthDay"
