--- a/app/src/main/res/drawable/for_calc_activity2.xml
+++ b/app/src/main/res/drawable/for_calc_activity2.xml
@@ -3,12 +3,15 @@
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/calc_gray"/>
+            <stroke android:color="@color/purple_add" android:width="2dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
+            <corners android:radius="10dp"/>
             <solid android:color="@color/calc_gray"/>
+            <stroke android:color="@color/black" android:width="1dp"/>
         </shape>
     </item>
 </selector>
